2005-02-23  Angus Leeming  <leeming@lyx.org>

	* ControlForks.[Ch]: removed.
	* Makefile.am: associated change.

2005-02-23  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* biblio.C (getAbbreviatedAuthor): add missing space before `et
	al.' in the non boost:format case

2005-01-17  Angus Leeming  <leeming@lyx.org>

	* tex_helpers.C (rescanTexStyles): prepend the name of the
	"TeXFiles" script with "sh ". Workaround for a brain-dead Windows.

2005-01-10  Angus Leeming  <leeming@lyx.org>

	* ControlAboutlyx.C:
	* ControlDocument.C:
	* ControlGraphics.C:
	* ControlPrefs.C:
	* tex_helpers.C: use support/package.h to provide the paths to the
	various directories used by LyX.

	* ControlTexinfo.C: remove reference to user_lyxdir.

2005-01-05  Angus Leeming  <leeming@lyx.org>

	* ControlGraphics.C: add "using lyx::FileInfo;" directive.

2004-12-07  Angus Leeming  <leeming@lyx.org>

	* *.[Ch]: remove all traces of #pragma interface/implementation

2004-04-29  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* ControlMath.C (find_xpm): 
	* ControlBibtex.C (applyParamsToInset): 
	* ControlBibitem.C (applyParamsToInset): fix #warning directives
	
	* ControlDialog.tmpl (show, update, hide): gcc 3.4 compilation fix

2003-02-10  Jean-Marc Lasgouttes  <lasgouttes@freesurf.fr>

	* ControlInclude.C (Browse): replace masterFilename_ with
	parentFilename_. 

2003-06-06  John Levon  <levon@movementarian.org>

	* ControlDocument.C: make sure a language change always gets
	propogated

2003-03-24  John Levon  <levon@movementarian.org>

	* ControlMath.C: include Pr function

2003-03-23  John Levon  <levon@movementarian.org>

	* ControlSpellchecker.C: make "words checked" translatable,
	from Michael Schmitt

2003-02-17  John Levon  <levon@movementarian.org>

	* ControlDialog.tmpl: do build before  setParams for
	spellchecker's sake 

	* ControlSpellchecker.h:
	* ControlSpellchecker.C: rework

2003-02-25  Dekel Tsur  <dekelts@tau.ac.il>
